--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<meta name="description" content="">
+	<title>Conway's Game of Life</title>
+	<meta name="description" content="Javascript version of Conway's Game of Life">
 
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<!-- <link rel="stylesheet" href="css/reset.css"> -->
+	<style>
+		#my-canvas {
+			display: block;
+			width: 500px;
+			height: 400px;
+			margin: 0 auto;
+		}
+	</style>
 </head>
 <body>
 	<canvas id="my-canvas" width="500" height="400"></canvas>
 	
-	<script src="js/libraries.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
