--- a/index.html
+++ b/index.html
@@ -12,11 +12,22 @@
 			width: 500px;
 			height: 400px;
 			margin: 0 auto;
+			/*border-right: 1px solid #c8c8c8;
+			border-bottom: 1px solid #c8c8c8;*/
+		}
+		#navigation {
+			margin-top: 10px;
+			text-align: center;
 		}
 	</style>
 </head>
 <body>
 	<canvas id="my-canvas" width="500" height="400"></canvas>
+	<div id="navigation">
+		<button id="pause-button">Pause</button>
+		<button id="clear-button">Clear</button>
+		<button id="randomize-button">Randomize</button>
+	</div>
 	
     <script src="js/main.js"></script>
 </body>
