Added some comments

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 			width: 500px;
 			height: 400px;
 			margin: 0 auto;
-			/*border-right: 1px solid #c8c8c8;
-			border-bottom: 1px solid #c8c8c8;*/
+			border: 1px solid #c8c8c8;
 		}
 		#navigation {
 			margin-top: 10px;
