Cleaned up the index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<button id="clear-button">Clear</button>
 		<button id="randomize-button">Randomize</button>
 	</div>
-
+	<!-- Game code in external file -->
     <script src="js/main.js"></script>
 </body>
 </html>
